K1J-1994: Cleanup. Removed deprecated usage warning in prod code. Cleanup of test files.